# scorequanta

./: .gitignore  .replit  pyproject.toml  replit.md
app/: ai_report.py  database.py  main.py  metrics_engine.py  models.py
app/static/: style.css
app/templates/: add_question.html  admin.html  admin_login.html  edit_question.html  landing.html  test.html
attached_assets/: Pasted-Build-a-production-style-but-lightweight-SAT-Quant-Diag_1770554920473.txt  Pasted-Enable-LaTeX-math-rendering-across-my-FastAPI-Jinja-SAT_1770828168773.txt  Pasted-Upgrade-ONLY-the-SAT-diagnostic-report-page-UI-to-maxim_1770830810463.txt  Pasted-Upgrade-ONLY-the-UI-of-my-existing-FastAPI-Jinja-Tailwi_1770703875904.txt  Pasted-Upgrade-ONLY-the-diagnostic-report-UI-of-my-existing-Fa_1770622991406.txt  Pasted-Upgrade-ONLY-the-landing-page-UI-and-copy-of-my-existin_1770623201132.txt
